Corrected length of search bar not to overlap

--- a/src/js/components/Header/Search.css
+++ b/src/js/components/Header/Search.css
@@ -2,7 +2,7 @@
 
 .Search {
     &-box {
-        width: 650px;
+        max-width: 650px;
         height: 60px;
 
         margin-top: 5px;
